翻译部分内容